# lazyworkflows

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  main.go
.github/workflows/: unit-tests-on-push.yml
Dockerfiles/: Dockerfile.test
api/: api.go
appconfig/: appconfig.go
consumer/: consumer.go
consumer/webapi/: webapi.go  webapi_test.go
meta/: meta.go
model/response/: response.go  response_test.go
src/: config.rs  main.rs  ui.rs
src/config/: manager.rs
src/workflows/: api.rs  dsl.rs  mod.rs
storage/: storage.go
test_resources/: test_resources.go
tui/: style.go  tui.go
