[package]
name = "lazyworkflows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
serde = "1.0.144"
serde_json = "1.0"
toml = "0.5.9"
dirs = "4.0.0"
fake-useragent = "0.1.3"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
tokio = { version = "1.20.1", features = ["full"] }
async-trait = "0.1.57"
futures = "0.3.23"
chrono = "0.4.0"